--- a/auth_app/templates/auth_app/lang_select.html
+++ b/auth_app/templates/auth_app/lang_select.html
@@ -8,39 +8,59 @@
 
     <link rel="stylesheet" href="..\static\css\new_style.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <script src="..\static\js\jquery-1.10.2.min.js"></script>
 </head>
 
 <body>
+
+    <!-- -----------------------------------------------
+    preloader ---------------------------------- -->
+
+    <div class="loader">
+        <div class="main">
+            <div class="text">
+                Kissan Tech
+            </div>
+            <div class="title">
+                MADE FOR KISSAN
+            </div>
+            <div class="bar">
+                <div id="fill"></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- =========================================== -->
     <div class="hero" style="background-image: url(../static/images/yekuchnew_h.jpg);">
         <div class="navbar">
             <img src="../static/images/logo.png" class="logo">
         </div>
         <div class="content">
             <small>Welcome to our kissan tech</small>
-            <h1>Choose your
-                <div class="right_text">
-                    अपनी भाषा
+
+            <div class="row">
+                <div class="col-md-4 col-sm-3">
+                    <h1>Choose your Language</h1>
                 </div>
-                <br>
-                Language
-                <div class="right_text_2">
-                    चुनें
+                <div class="col-md-7 col-sm-7">
+                    <div class="right_text">अपनी भाषा चुनें</div>
                 </div>
-            </h1>
+            </div>
+
 
             <form class='form' action="signup" method="POST">
 
                 {% csrf_token %}
-
-                <button type="submit" name="language_selected" value="en">English</button>
-                <button type="submit" name="language_selected" value="hi">हिन्दी</button>
-                <button type="submit" name="language_selected" value="pa">ਪੰਜਾਬੀ</button>
-                <br>
-                <button type="submit" name="language_selected" value="mr">मराठी</button>
-                <button type="submit" name="language_selected" value="ta">తెలుగు</button>
-                <button type="submit" name="language_selected" value="hi">हरियाणवी</button>
+                <div class="mybuttons">
+                    <button type="submit" name="language_selected" value="en">English</button>
+                    <button type="submit" name="language_selected" value="hi">हिन्दी</button>
+                    <button type="submit" name="language_selected" value="pa">ਪੰਜਾਬੀ</button>
+                    <br>
+                    <button type="submit" name="language_selected" value="mr">मराठी</button>
+                    <button type="submit" name="language_selected" value="ta">తెలుగు</button>
+                    <button type="submit" name="language_selected" value="hi">हरियाणवी</button>
+                </div>
             </form>
-
 
 
 
@@ -55,6 +75,36 @@
             <img src="../static/images/bubble.png" alt="">
         </div>
     </div>
+
+
+    <!-- -----------------------------------------------
+    loading scripts ---------------------------- -->
+
+    <script type="text/javascript">
+        var progress = 0;
+        document.onreadystatechange = function () {
+            if (document.readyState == "interactive") {
+                var allElement = $("*");
+                var length = allElement.length;
+                for (var i = 0; i < length; i++) {
+                    set_element(allElement[i], length);
+                }
+            }
+        }
+        function set_element(element, totalElement) {
+            var percentage = 100 / totalElement;
+            if ($(element).length == 1) {
+                $("#fill").animate({ width: progress + percentage + "%" }, 100, function () {
+                    if (document.getElementById("fill").style.width == "100%") {
+                        $(".main").fadeOut(500);
+                    }
+                });
+                progress = progress + percentage;
+            }
+        }
+    </script>
+
+
 </body>
 
 </html>
