Fixed a minor bug

--- a/shop/templates/shop/product_details.html
+++ b/shop/templates/shop/product_details.html
@@ -493,6 +493,7 @@
             //alert(plus_minus_inner_html);
             //document.getElementById("add_new_item").innerHTML = plus_minus_inner_html;
             var add_new_item = document.getElementById("add_new_item");
+            document.getElementById(product_id).value = 1;
             var dynamic_buttons = document.getElementById("dynamic_buttons");
             add_new_item.style.display = 'none';
             dynamic_buttons.style.display = 'block';
